Update readme, patch polymer.html

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Don’t commit the following directories created by pub.
 build/
-packages/
+packages
 
 # Or the files created by dart2js.
 *.dart.js
@@ -8,6 +8,7 @@ packages/
 *.js_
 *.js.deps
 *.js.map
+*.sw?
 
 # Include when developing application packages.
 pubspec.lock
