--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ description: Core elements for Dart
 dependencies:
   polymer: ">=0.11.0-dev.6 <0.12.0"
   quiver: ">=0.17.0 <0.19.0"
+  web_components: ">=0.3.5-dev.3 <0.4.0"
 dev_dependencies:
   html5lib: ">=0.11.0 <0.12.0"
   path: ">=1.0.0 <2.0.0"
@@ -15,6 +16,7 @@ transformers:
     - example/core_collapse.html
     - example/core_field.html
     - example/core_header_panel.html
+    - example/core_icon_button.html
     - example/core_input.html
     - example/core_layout_grid.html
     - example/core_layout_trbl.html
