--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Core elements for Dart
 dependencies:
   polymer: ">=0.11.0-dev.6 <0.12.0"
+  quiver: ">=0.17.0 <0.19.0"
 dev_dependencies:
   html5lib: ">=0.11.0 <0.12.0"
   path: ">=1.0.0 <2.0.0"
@@ -26,6 +27,7 @@ transformers:
     - example/core_splitter.html
     - example/core_toolbar.html
     - example/core_tooltip.html
+    - example/dart_ajax.html
     - example/dart_list.html
     - example/dart_localstorage.html
     lint: false
