--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: core_elements
-version: 0.0.1-dev
+version: 0.0.4-dev.1
 author: Polymer.dart Authors <web-ui-dev@dartlang.org>
-description: Core elements for Dart
+description: Polymer core-elements for Dart
 dependencies:
   polymer: ">=0.11.0-dev.6 <0.12.0"
   quiver: ">=0.17.0 <0.19.0"
