--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: core_elements
-version: 0.0.4-dev.7
+version: 0.0.4-dev.8
 author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Polymer core-elements for Dart
 homepage: https://www.dartlang.org/polymer-dart/
 dependencies:
-  polymer: ">=0.11.0-dev.8 <0.12.0"
+  polymer: ">=0.11.0+1 <0.12.0"
   quiver: ">=0.17.0 <0.19.0"
   web_components: ">=0.3.5-dev.3 <0.4.0"
 dev_dependencies:
