rename to remaining dart-* to core-*-dart, fixes #28

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dev_dependencies:
 transformers:
 - polymer:
     entry_points:
+    - example/core_ajax_dart.html
     - example/core_animation.html
     - example/core_collapse.html
     - example/core_drag_drop.html
@@ -30,6 +31,7 @@ transformers:
     - example/core_layout_grid.html
     - example/core_layout_trbl.html
     - example/core_list_dart.html
+    - example/core_localstorage_dart.html
     - example/core_media_query.html
     - example/core_menu.html
     - example/core_menu_button.html
@@ -46,6 +48,4 @@ transformers:
     - example/core_style.html
     - example/core_toolbar.html
     - example/core_tooltip.html
-    - example/dart_ajax.html
-    - example/dart_localstorage.html
     lint: false
