update unit test according to the comments in #43

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,4 +50,6 @@ transformers:
     - example/core_style.html
     - example/core_toolbar.html
     - example/core_tooltip.html
+    - test/core_ajax_dart.html
+    - test/core_collapse.html
     lint: false
