--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,4 +52,5 @@ transformers:
     - example/core_tooltip.html
     - test/core_ajax_dart.html
     - test/core_collapse.html
+    - test/core_localstorage_dart.html
     lint: false
