Migrate over core-animation-pages to core-elements from paper-elements, and fix the grid example.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   web_components: ">=0.4.0 <0.5.0"
 dev_dependencies:
   html5lib: ">=0.11.0 <0.12.0"
+  paper_elements: ">=0.0.1 <0.1.0"
   path: ">=1.0.0 <2.0.0"
   yaml: ">=1.0.0 <2.0.0"
   unittest: ">=0.11.0+2 <0.12.0"
@@ -17,6 +18,15 @@ transformers:
 - polymer:
     entry_points:
     - example/core_ajax_dart.html
+    - example/core_animated_pages/grid.html
+    - example/core_animated_pages/list.html
+    - example/core_animated_pages/music.html
+    - example/core_animated_pages/nested.html
+    - example/core_animated_pages/nested_animated_pages.html
+    - example/core_animated_pages/news.html
+    - example/core_animated_pages/quiz1.html
+    - example/core_animated_pages/shadow.html
+    - example/core_animated_pages/simple.html
     - example/core_animation.html
     - example/core_collapse.html
     - example/core_drag_drop.html
