--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Polymer core-elements for Dart
 homepage: https://www.dartlang.org/polymer-dart/
 dependencies:
-  polymer: ">=0.11.0+1 <0.12.0"
+  polymer: ">=0.12.0-dev <0.12.0"
   quiver: ">=0.17.0 <0.19.0"
   web_components: ">=0.4.0 <0.5.0"
 dev_dependencies:
@@ -52,6 +52,7 @@ transformers:
     - example/core_tooltip.html
     - test/core_ajax_dart.html
     - test/core_collapse.html
+    - test/core_input.html
     - test/core_localstorage_dart.html
     - test/core_selection.html
     - test/core_selection_multi.html
