--- a/core_elements_config.yaml
+++ b/core_elements_config.yaml
@@ -43,6 +43,7 @@ files_to_generate:
   - core-selection/core-selection.html
   - core-selector/core-selector.html
   - core-shared-lib/core-shared-lib.html
+  - core-signals/core-signals.html
   - core-splitter/core-splitter.html
   - core-style/core-style.html
   - core-toolbar/core-toolbar.html
