--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Polymer core-elements for Dart
 homepage: https://www.dartlang.org/polymer-dart/
 dependencies:
-  polymer: ">=0.11.0 <0.12.0"
+  polymer: ">=0.11.0+1 <0.12.0"
   quiver: ">=0.17.0 <0.19.0"
   web_components: ">=0.4.0 <0.5.0"
 dev_dependencies:
