--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ transformers:
     - test/core_collapse.html
     - test/core_input.html
     - test/core_localstorage_dart.html
+    - test/core_menu_button.html
     - test/core_selection.html
     - test/core_selection_multi.html
     - test/core_selection_multi.html
