--- a/core_elements_config.yaml
+++ b/core_elements_config.yaml
@@ -1,10 +1,12 @@
 # Configuration for running tool/generate_dart_api.dart
 files_to_generate:
   - core-animated-pages/core-animated-pages.html:
-      # subdirs don't work
+      # subdir imports don't work.
       omit_imports:
         - transitions/hero-transition.html
         - transitions/cross-fade.html
+  - core-animated-pages/transitions/core-transition-pages.html
+  - core-animated-pages/transitions/hero-transition.html
   - core-animation/core-animation.html
   - core-animation/core-animation-group.html
   - core-animation/web-animations.html
