--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,14 @@ author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Polymer core-elements for Dart
 homepage: https://www.dartlang.org/polymer-dart/
 dependencies:
-  polymer: ">=0.11.0+1 <0.12.0"
+  polymer: ">=0.12.0 <0.13.0"
   quiver: ">=0.17.0 <0.19.0"
-  web_components: ">=0.4.0 <0.5.0"
+  web_components: ">=0.5.0 <0.6.0"
 dev_dependencies:
   html5lib: ">=0.11.0 <0.12.0"
   paper_elements: ">=0.0.1 <0.1.0"
   path: ">=1.0.0 <2.0.0"
-  yaml: ">=1.0.0 <2.0.0"
+  yaml: ">=1.0.0 <3.0.0"
   unittest: ">=0.11.0+2 <0.12.0"
   matcher: ">=0.10.1+1 <0.11.0"
 transformers:
