--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: core_elements
-version: 0.1.0-dev
+version: 0.1.0
 author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Polymer core-elements for Dart
 homepage: https://www.dartlang.org/polymer-dart/
@@ -9,7 +9,7 @@ dependencies:
   web_components: ">=0.5.0 <0.6.0"
 dev_dependencies:
   html5lib: ">=0.11.0 <0.12.0"
-  paper_elements: ">=0.0.1 <0.1.0"
+  paper_elements: ">=0.1.0 <0.2.0"
   path: ">=1.0.0 <2.0.0"
   yaml: ">=1.0.0 <3.0.0"
   unittest: ">=0.11.0+2 <0.12.0"
