--- a/core_elements_config.yaml
+++ b/core_elements_config.yaml
@@ -48,6 +48,7 @@ files_to_generate:
   - core-overlay/core-overlay-layer.html
   - core-pages/core-pages.html
   - core-popup-menu/core-popup-menu.html
+  - core-popup-menu/core-popup-overlay.html
   - core-range/core-range.html
   - core-scaffold/core-scaffold.html
   - core-scroll-header-panel/core-scroll-header-panel.html
