--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: core_elements
-version: 0.2.0+1
+version: 0.2.1
 author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Polymer core-elements for Dart
 homepage: https://www.dartlang.org/polymer-dart/
 dependencies:
-  polymer: ">=0.13.0 <0.14.0"
+  polymer: ">=0.14.0 <0.15.0"
   quiver: ">=0.17.0 <0.19.0"
-  web_components: ">=0.5.0 <0.7.0"
+  web_components: ">=0.7.0 <0.8.0"
 dev_dependencies:
   html5lib: ">=0.11.0 <0.13.0"
   paper_elements: ">=0.1.0 <0.2.0"
