update core-input to 88cbe6f

--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "polymer": "polymer/polymer#0.4.0",
-    "core-elements": "polymer/core-elements#0.4.0"
+    "core-elements": "polymer/core-elements#0.4.0",
+    "core-input": "polymer/core-input#master"
   }
 }
