--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: core_elements
-version: 0.3.0-dev
+version: 0.3.0
 author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Polymer core-elements for Dart
 homepage: https://www.dartlang.org/polymer/
 dependencies:
   custom_element_apigen: ">= 0.0.2 <0.1.0"
-  polymer: ">=0.14.0 <0.15.0"
+  polymer: ">=0.14.0 <0.16.0"
   quiver: ">=0.17.0 <0.19.0"
   web_components: ">=0.7.0 <0.8.0"
 dev_dependencies:
