add core-a11y-keys example

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ environment:
 transformers:
 - polymer:
     entry_points:
+    - example/core_a11y_keys.html
     - example/core_ajax_dart.html
     - example/core_animated_pages/grid.html
     - example/core_animated_pages/list.html
