--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ transformers:
     - example/core_collapse.html
     - example/core_drag_drop.html
     - example/core_dropdown.html
+    - example/core_dropdown_menu.html
     - example/core_drag_drop.html
     - example/core_drawer_panel.html
     - example/core_field.html
