--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ transformers:
     # demo.html file uses iframes to load them in.
     - example/demo.html
     - test/core_ajax_dart_test.html
+    - test/core_ajax_dart_response_and_error_test.html
     - test/core_animated_pages_test.html
     - test/core_collapse_test.html
     - test/core_input_test.html
