--- a/codereview.settings
+++ b/codereview.settings
@@ -1,3 +1,3 @@
-CODE_REVIEW_SERVER: https://chromiumcodereview.appspot.com/
+CODE_REVIEW_SERVER: http://codereview.chromium.org/
 VIEW_VC: https://github.com/dart-lang/core-elements/commit/
-CC_LIST:
+CC_LIST: reviews@dartlang.org
