--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ dependencies:
   custom_element_apigen: ">= 0.1.0 <0.2.0"
   polymer: ">=0.14.0 <0.16.0"
   quiver: ">=0.17.0 <0.19.0"
-  web_components: ">=0.7.0 <0.8.0"
+  web_components: ">=0.9.0 <0.10.0"
 dev_dependencies:
   html5lib: ">=0.11.0 <0.13.0"
   paper_elements: ">=0.4.0 <0.5.0"
@@ -19,6 +19,11 @@ environment:
   sdk: '>=1.6.0 <2.0.0'
 transformers:
 - polymer:
+    lint:
+      exclude:
+        - lib/src/
+        - example/core_style
+        - example/core_animated_pages/shadow
     entry_points:
     - example/core_a11y_keys.html
     - example/core_ajax_dart.html
