--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: core_elements
-version: 0.4.0+6
+version: 0.5.0
 author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Polymer core-elements for Dart
 homepage: https://www.dartlang.org/polymer/
 dependencies:
   custom_element_apigen: ">= 0.1.1 <0.2.0"
-  polymer: ">=0.14.0 <0.16.0"
+  polymer: ">=0.15.2 <0.16.0"
   quiver: ">=0.17.0 <0.19.0"
-  web_components: ">=0.9.0 <0.10.0"
+  web_components: ">=0.10.0 <0.11.0"
 dev_dependencies:
   html5lib: ">=0.11.0 <0.13.0"
-  paper_elements: ">=0.4.0 <0.6.0"
+  paper_elements: ">=0.4.0 <0.7.0"
   path: ">=1.0.0 <2.0.0"
   yaml: ">=1.0.0 <3.0.0"
   unittest: ">=0.11.0+2 <0.12.0"
@@ -76,7 +76,7 @@ transformers:
     # demo.html file uses iframes to load them in.
     - example/demo.html
     - test/core_ajax_dart_test.html
-    - test/core_ajax_dart_response_and_error_test.html
+    - test/core_ajax_dart_progress_test.html
     - test/core_animated_pages_test.html
     - test/core_collapse_test.html
     - test/core_input_test.html
