get grouped flickr demo working

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ transformers:
     - example/core_layout_trbl.html
     - example/core_list_dart/basic.html
     - example/core_list_dart/grid.html
+    - example/core_list_dart/flickr_grid_grouped.html
     - example/core_localstorage_dart.html
     - example/core_media_query.html
     - example/core_menu.html
