--- a/core_elements_config.yaml
+++ b/core_elements_config.yaml
@@ -61,6 +61,7 @@ files_to_generate:
   - core-range/core-range.html
   - core-scaffold/core-scaffold.html
   - core-scroll-header-panel/core-scroll-header-panel.html
+  - core-scroll-threshold/core-scroll-threshold.html
   - core-selection/core-selection.html
   - core-selector/core-selector.html
   - core-shared-lib/core-shared-lib.html
