add core-scroll-threshold example

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ transformers:
     - example/core_range.html
     - example/core_scaffold.html
     - example/core_scroll_header_panel.html
+    - example/core_scroll_threshold.html
     - example/core_selection.html
     - example/core_selector.html
     - example/core_shared_lib.html
