--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ transformers:
     - test/core_input_test.html
     - test/core_input_basic_test.html
     - test/core_input_a11y_test.html
+    - test/core_list_dart_basic_test.html
     - test/core_localstorage_dart_test.html
     - test/core_localstorage_dart_raw_test.html
     - test/core_localstorage_dart_value_binding_test.html
