--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: core_elements
-version: 0.6.1-dev
+version: 0.6.1
 author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Polymer core-elements for Dart
 homepage: https://www.dartlang.org/polymer/
@@ -14,15 +14,6 @@ dev_dependencies:
   yaml: ">=1.0.0 <3.0.0"
   unittest: ">=0.11.0+2 <0.12.0"
   matcher: ">=0.10.1+1 <0.12.0"
-dependency_overrides:
-  polymer:
-    git:
-      url: https://github.com/dart-lang/polymer-dart.git
-      ref: smoke-generator
-  custom_element_apigen:
-    git:
-      url: https://github.com/dart-lang/custom-element-apigen.git
-      ref: reorg
 environment:
   sdk: '>=1.6.0 <2.0.0'
 transformers:
