--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: core_elements
-version: 0.7.0
+version: 0.7.1
 author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Polymer core-elements for Dart
 homepage: https://www.dartlang.org/polymer/
 dependencies:
-  custom_element_apigen: ">=0.1.5 <0.2.0"
-  polymer: ">=0.16.0 <0.17.0"
+  custom_element_apigen: ">=0.1.7 <0.2.0"
+  polymer: ">=0.16.1+4 <0.17.0"
+  polymer_interop: ">=0.1.0+2 <0.2.0"
   quiver: ">=0.17.0 <0.22.0"
   web_components: ">=0.9.0 <0.12.0"
 dev_dependencies:
