--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,11 @@
 name: core_elements
-version: 0.7.1+6
+version: 0.7.1+7
 author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Polymer core-elements for Dart
 homepage: https://www.dartlang.org/polymer/
 dependencies:
+  observable: "^0.14.0"
+  observe: "^0.14.0"
   polymer: ">=0.16.1+4 <0.17.0"
   polymer_interop: ">=0.1.0+2 <0.2.0"
   quiver: ">=0.17.0 <0.22.0"
