--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   quiver: ">=0.17.0 <0.22.0"
   web_components: ">=0.9.0 <0.13.0"
 dev_dependencies:
-  custom_element_apigen: ">=0.1.7 <0.2.0"
+  custom_element_apigen: ">=0.1.7+2 <0.2.0"
   html5lib: ">=0.11.0 <0.13.0"
   path: ">=1.0.0 <2.0.0"
   yaml: ">=1.0.0 <3.0.0"
