--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,17 @@
 name: core_elements
-version: 0.7.1+6
+version: 0.7.1+7
 author: Polymer.dart Authors <web-ui-dev@dartlang.org>
 description: Polymer core-elements for Dart
 homepage: https://www.dartlang.org/polymer/
 dependencies:
-  polymer: ">=0.16.1+4 <0.17.0"
+  observable: "^0.14.0"
+  observe: "^0.14.0"
+  polymer: ">=0.16.4+4 <0.17.0"
   polymer_interop: ">=0.1.0+2 <0.2.0"
   quiver: ">=0.17.0 <0.22.0"
   web_components: ">=0.9.0 <0.13.0"
 dev_dependencies:
-  custom_element_apigen: ">=0.1.7 <0.2.0"
+  custom_element_apigen: ">=0.1.7+2 <0.2.0"
   html5lib: ">=0.11.0 <0.13.0"
   path: ">=1.0.0 <2.0.0"
   yaml: ">=1.0.0 <3.0.0"
